Cambios letra y color completados

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a href='2º Parte/1) Moneda/moneda.php'><input type='button' value='Moneda'></a>
     <hr>
     <h4>2) Piedra Papel Tijera</h4>
-    <a href='2º Parte/2) Piedra papel tijera/juego.php'><input type='button' value='Ejercicio 3'></a>
+    <a href='2º Parte/2) Piedra papel tijera/juego.php'><input type='button' value='Piedra Papel, Tijera'></a>
     <hr>
     <h4>3) Manejo de funciones</h4>
     <a href='2º Parte/3) Manejo de Funciones/Actividad A/actividadA.php'><input type='button' value='A'></a>
